(fix) O3-5703: Prevent "Select source type" label from wrapping in stock sources toolbar (#562)

--- a/src/stock-sources/stock-sources-filter/stock-sources-filter.scss
+++ b/src/stock-sources/stock-sources-filter/stock-sources-filter.scss
@@ -5,6 +5,10 @@
     gap: 0;
   }
 
+  :global(.cds--label) {
+    white-space: nowrap;
+  }
+
   :global(.cds--list-box__menu-icon) {
     height: layout.$spacing-05;
   }
